--- a/publication/2020-plateforme-crowdfunding/cite.bib
+++ b/publication/2020-plateforme-crowdfunding/cite.bib
@@ -11,7 +11,7 @@ number = {1},
 pages = {135--151},
 publisher = {Lavoisier},
 title = {{Une plateforme de crowdfunding et son r{\'{e}}seau social. L'exemple Ulule}},
-url = {https://www.cairn.info/load_pdf.php?ID_ARTICLE=RFG_286_0135 https://www.cairn.info/revue-francaise-de-gestion-2020-1-page-135.htm},
+url = {https://www.cairn.info/load_pdf.php?ID_ARTICLE=RFG_286_0135},
 volume = {286},
 year = {2020}
 }
